fix issue with button overlapping by making inline-block

--- a/matrices/sites/bare-bones/less/components/button.less
+++ b/matrices/sites/bare-bones/less/components/button.less
@@ -7,6 +7,7 @@
 
 .bb-button,
 a.bb-button {
+    display: inline-block;
     padding: 12px 14px;
     background: @button-primary-color;
     border: none;
