--- a/matrices/sites/bare-bones/less/components/card.less
+++ b/matrices/sites/bare-bones/less/components/card.less
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-bottom: 8px;
+    // padding-bottom: 8px;
 
     &--left {
         align-items: flex-start;
@@ -24,10 +24,10 @@
     }
 
     &-copy {
-        padding: 16px 0 8px;
+        // padding: 16px 0 8px;
     }
 
     &-cta {
-        padding: 8px 0 16px;
+        // padding: 8px 0 16px;
     }
 }
